--- a/Documentos/04. Objetos/05. Number e Math/index.html
+++ b/Documentos/04. Objetos/05. Number e Math/index.html
@@ -12,6 +12,6 @@
     <li>Item 2</li>
     <li>Item 3</li>
   </ul>
-  <script src="script-aula.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
